Prevent overlap of asset symbol and logo on assets page

--- a/css/style.css
+++ b/css/style.css
@@ -1162,3 +1162,7 @@ ul, li{
 .footer-icons a:hover, .footer-icons a:focus {
   color: white;
 }
+
+.asset-symbol {
+  padding-right: 50px;
+}
